# PythonOrchestra

./: .gitignore  README.md  pyproject.toml
configs/: bolt_wrench.yaml  bolt_wrench_stage.yaml  bolt_wrench_stage01.yaml  bolt_wrench_stage01_noop.yaml  default.yaml  quixbugs.yaml  quixbugs_full.yaml  quixbugs_mock.yaml
orchestrator/: config.py  context_collector.py  executor.py  judge.py  patcher.py  reviewer.py  run.py  stages.py  state.py
orchestrator/prompts/: reviewer_system.txt  reviewer_user.txt
tools/: mock_reviewer_quixbugs_gcd.py  noop_reviewer.py
